--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -112,7 +112,7 @@
         </div>
         <div class="col border d-flex justify-content-center align-items-center">
           <p class=" fw-bolder" >
-            PRE-EMPLOYMENT EVALUATION SHEET OFFICERS - ENGINE
+            "PRE-EMPLOYEMENT EVALUATION SHEET OFFICERS - DECK"   
           </p>
         </div>
         <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
@@ -619,6 +619,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="sseNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="sseInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -629,6 +631,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ecdisNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="edisInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -639,6 +643,9 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="anchorNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="anchorInapplicable"/>
+                  <span>Inapplicable</span>
+                  
                 </div>
               </div>
 
@@ -649,6 +656,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="deckNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="deckInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -659,6 +668,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="bridgeNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="bridgeInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -669,6 +680,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ballastNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="ballastInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -679,6 +692,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="mlcNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="mlcInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -689,6 +704,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="pmsNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="pmsInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -697,8 +714,8 @@ SIRE/CID experience
                 <div class="space-x-2">
                   <input type="checkbox" class="form-checkbox" id="lsaYes"/>
                   <span>YES</span>
-                  <input type="checkbox" class="form-checkbox" id="lsaNo"/>
-                  <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="lsaInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -712,6 +729,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="extraNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="extraInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -726,6 +745,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="expNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="expInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -736,6 +757,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="distressNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="distressInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
             </div>
@@ -748,6 +771,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="dryNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="dryInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -758,6 +783,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="privacyNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="privacyInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -771,6 +798,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="tugsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="tugsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -781,6 +810,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="gmoNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="gmoInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -791,6 +822,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ecaNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="ecaInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -803,6 +836,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="auditsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="auditsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -813,6 +848,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="awareNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="awareInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -823,6 +860,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="yardNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="yardInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -836,6 +875,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="cmsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="cmsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -850,6 +891,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="mandatNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="mandatInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -863,6 +906,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="riverNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="riverInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
             </div>
@@ -993,7 +1038,13 @@ SIRE/CID experience
         'tugsYes', 'tugsNo', 'gmoYes', 'gmoNo', 'ecaYes', 'ecaNo', 'auditsYes', 'auditsNo', 
         'awareYes', 'awareNo', 'yardYes', 'yardNo', 'cmsYes', 'cmsNo', 'mandatYes', 
         'mandatNo', 'riverYes', 'riverNo', 'reasonForLeaving', 'intComments', 'accepted', 
-        'rejected', 'grading', 'intName', 'signature', 'dateNow'
+        'rejected', 'grading', 'intName', 'signature', 'dateNow','sseInapplicable','edisInapplicable',
+         'anchorInapplicable','deckInapplicable','bridgeInapplicable','ballastInapplicable',
+          'mlcInapplicable','pmsInapplicable','lsaInapplicable','extraInapplicable',
+          'expInapplicable','distressInapplicable','dryInapplicable','privacyInapplicable',
+          'tugsInapplicable','gmoInapplicable','ecaInapplicable','auditsInapplicable',
+         'awareInapplicable','yardInapplicable','cmsInapplicable','mandatInapplicable',
+          'riverInapplicable'
     ];
 
     // Log fetched data to ensure all values are present
