--- a/views/public/html/Evaluation-GalleyOfficer.html
+++ b/views/public/html/Evaluation-GalleyOfficer.html
@@ -113,7 +113,7 @@
         </div>
         <div class="col border d-flex justify-content-center align-items-center">
           <p class=" fw-bolder" >
-            PRE-EMPLOYMENT EVALUATION SHEET OFFICERS - ENGINE
+            "PRE-EMPLOYEMENT EVALUATION SHEET RATINGS - ENGINE"	
           </p>
         </div>
         <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
@@ -404,7 +404,8 @@
       <div class="col-md-6 mb-3">
       <div class="border border-black-1">
         <div class="bg-light pt-3 p-3">
-          <h5 class="form-label">TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
+          <h5 class="form-label">Types of Auxiliaries previously worked with:											
+          </h5>
           <div class="d-flex flex-wrap">
             <div class="form-check me-2">
               <input class="form-check-input" type="checkbox" id="yanmar">
@@ -598,6 +599,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsNo" value="no">
                             <label class="form-check-label" for="umsVesselsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsInapplicable" value="no">
+                          <label class="form-check-label" for="umsVesselsInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Bilge & Sludge Management : Engine Ratings</label>
@@ -610,6 +615,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeNo" value="no">
                             <label class="form-check-label" for="bilgeSludgeNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeInapplicable" value="no">
+                          <label class="form-check-label" for="bilgeSludgeInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                                            <label class="form-label">Experience on fresh water generator (MTM, WIPER)</label>
                                             <div class="mb-2">
@@ -622,6 +631,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareNo" value="no">
                             <label class="form-check-label" for="pmsSoftwareNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareInapplicable" value="no">
+                          <label class="form-check-label" for="pmsSoftwareInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Principle & Operation procedure -OWS (MTM, WIPER)</label>
@@ -634,6 +647,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersNo" value="no">
                             <label class="form-check-label" for="reeferContainersNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersInapplicable" value="no">
+                          <label class="form-check-label" for="reeferContainersInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                         <label class="form-label">Main Engine starting procedure expereince (MTM, WIPER, OWS)</label>
                         <div class="mb-2">
@@ -646,6 +663,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesNo" value="no">
                             <label class="form-check-label" for="extraordinaryCircumstancesNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesInapplicable" value="no">
+                          <label class="form-check-label" for="extraordinaryCircumstancesInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Sewage treatment plant experience (MTM, WIPER, OWS)</label>
@@ -659,6 +680,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageNo" value="no">
                             <label class="form-check-label" for="congestedPassageNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageInapplicable" value="no">
+                          <label class="form-check-label" for="congestedPassageInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Experience with Cargo pumps (MTM, WIPER, OWS)</label>
@@ -672,6 +697,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockNo" value="no">
                             <label class="form-check-label" for="dryDockNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockInapplicable" value="no">
+                          <label class="form-check-label" for="dryDockInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Experience with boilers (MTM, WIPER, OWS)</label>
@@ -685,6 +714,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo" value="no">
                             <label class="form-check-label" for="csmPlanningNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable" value="no">
+                          <label class="form-check-label" for="csmPlanningInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                       <label class="form-label">Knowledge on types of welding for eg: ARC, TIG, MIG (FITTER)</label>
                         <div class="mb-2">
@@ -697,6 +730,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo1" value="no">
                             <label class="form-check-label" for="csmPlanningNo1">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable1" value="no">
+                          <label class="form-check-label" for="csmPlanningInapplicable1">Inapplicable</label>
+                      </div>
                     </div>
                         <label class="form-label">Garbage Management - Engine</label>
                         <div class="mb-2">
@@ -709,9 +746,13 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo2" value="no">
                             <label class="form-check-label" for="csmPlanningNo2">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable2" value="no">
+                          <label class="form-check-label" for="csmPlanningInapplicable2">Inapplicable</label>
+                      </div>
                     </div>
 
-<!-- hgcjvhbkjknlm/;thcjyvkuhlijlk/;grhtjyfkugihoj/lk;hhjhk -->
+
                 </div>
                 <div class="col-md-6">
                       <label class="form-label">Awareness of safety and ISM Code</label>
@@ -725,6 +766,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo3" value="no">
                             <label class="form-check-label" for="csmPlanningNo3">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable3" value="no">
+                          <label class="form-check-label" for="csmPlanningInapplicable3">Inapplicable</label>
+                      </div>
                     </div>
 
                     
@@ -739,6 +784,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryNo" value="no">
                             <label class="form-check-label" for="yardDeliveryNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryInapplicable" value="no">
+                          <label class="form-check-label" for="yardDeliveryInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Knowledge on existing mandatory regulations (SOLAS, MARPOL)</label>
@@ -752,6 +801,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMNo" value="no">
                             <label class="form-check-label" for="safetyISMNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMInapplicable" value="no">
+                          <label class="form-check-label" for="safetyISMInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Experience in any extra-ordinary circumstances such as Collision, abandon ship, pollution</label>
@@ -765,6 +818,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="audits" id="auditsNo" value="no">
                             <label class="form-check-label" for="auditsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="audits" id="auditsInapplicable" value="no">
+                          <label class="form-check-label" for="auditsInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Experience of piracy Zone (any previous bad expereince)</label>
@@ -778,6 +835,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationNo" value="no">
                             <label class="form-check-label" for="ecaSecaOperationNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationInapplicable" value="no">
+                          <label class="form-check-label" for="ecaSecaOperationInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Cleanliness & Maintenance of Accomodation, common areas and cabins</label>
@@ -791,6 +852,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementNo" value="no">
                             <label class="form-check-label" for="garbageManagementNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementInapplicable" value="no">
+                          <label class="form-check-label" for="garbageManagementInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Awareness of ISPS</label>
@@ -804,6 +869,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverNo" value="no">
                             <label class="form-check-label" for="fuelChangeoverNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverInapplicable" value="no">
+                          <label class="form-check-label" for="fuelChangeoverInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">knowledge on procedure about 6G & 4G Welding (FITTER)</label>
@@ -817,9 +886,13 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresNo" value="no">
                             <label class="form-check-label" for="operationProceduresNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresInapplicable" value="no">
+                          <label class="form-check-label" for="operationProceduresInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
-                                       </div>
+            </div>
                    <div class="mt-4 mb-3">
             <label class="block mb-2">Last Employer – Reason for Leaving</label>
             <input
@@ -1032,7 +1105,17 @@ SIRE/CDI experience Right ship
               'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes',
               'operationProceduresNo', 'regulationsYes', 'regulationsNo',
               'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
-              'intName', 'dateNow', 'signNow','leaving','intComments' ];
+              'intName', 'dateNow', 'signNow','leaving','intComments' ,'umsVesselsInapplicable',
+              'bilgeSludgeInapplicable','pmsSoftwareInapplicable','reeferContainersInapplicable',
+              'extraordinaryCircumstancesInapplicable','congestedPassageInapplicable','dryDockInapplicable',
+              'csmPlanningInapplicable','csmPlanningInapplicable1','csmPlanningInapplicable2',
+              'csmPlanningInapplicable3','yardDeliveryInapplicable','safetyISMInapplicable',
+              'auditsInapplicable','ecaSecaOperationInapplicable','garbageManagementInapplicable',
+              'fuelChangeoverInapplicable','operationProceduresInapplicable'
+
+
+            
+            ];
 
                 const evalObject = {};
 
