--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -110,7 +110,8 @@
             </div>
             <div class="title-col">
                 <p class="fw-bolder ">
-                    PRE-EMPLOYMENT EVALUATION SHEET OFFICERS - ENGINE
+                  "PRE-EMPLOYEMENT EVALUATION SHEET OFFICERS - ENGINE"													
+													
                 </p>
             </div>
             <div class="info-col">
@@ -284,7 +285,8 @@
       <div class="col-md-6 mb-5">
         <div class="border border-black-1 ">
           <div class="bg-light p-3">
-            <h5 for="cargosHandled" class="">CARGOS HANDLED</h5>
+            <h5 for="cargosHandled" class="">CARGO's CARRIED											
+            </h5>
             <input id="cargosHandled" type="text" >
           </div>
         </div>
@@ -623,6 +625,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsNo" value="no">
                             <label class="form-check-label" for="umsVesselsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsInapplicable" value="no">
+                          <label class="form-check-label" for="umsVesselsInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Bilge & Sludge Management for Engineers</label>
@@ -635,9 +641,13 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeNo" value="no">
                             <label class="form-check-label" for="bilgeSludgeNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeInapplicable" value="no">
+                          <label class="form-check-label" for="bilgeSludgeInapplicable">Inapplicable</label>
+                      </div>
                     </div>
-                                           <label class="form-label">Planned Maintenance System (PMS) Software experience</label>
-                                            <div class="mb-2">
+                          <label class="form-label">Planned Maintenance System (PMS) Software experience</label>
+                            <div class="mb-2">
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareYes" value="yes">
@@ -647,6 +657,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareNo" value="no">
                             <label class="form-check-label" for="pmsSoftwareNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareInapplicable" value="no">
+                          <label class="form-check-label" for="pmsSoftwareInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Reefer containers experience</label>
@@ -659,6 +673,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersNo" value="no">
                             <label class="form-check-label" for="reeferContainersNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersInapplicable" value="no">
+                          <label class="form-check-label" for="reeferContainersInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                         <label class="form-label">Experience in any extraordinary circumstances such as collision, abandon ship, pollution, Piracy zone</label>
                         <div class="mb-2">
@@ -671,6 +689,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesNo" value="no">
                             <label class="form-check-label" for="extraordinaryCircumstancesNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesInapplicable" value="no">
+                          <label class="form-check-label" for="extraordinaryCircumstancesInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Exp/Knowledge of navigation thru congested passage (Singapore straits/Sunda Straits/Gibraltar/Bosporus/Dover Straits/Skaw)</label>
@@ -684,6 +706,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageNo" value="no">
                             <label class="form-check-label" for="congestedPassageNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageInapplicable" value="no">
+                          <label class="form-check-label" for="congestedPassageInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Dry dock experience during the last three years</label>
@@ -697,6 +723,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockNo" value="no">
                             <label class="form-check-label" for="dryDockNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockInapplicable" value="no">
+                          <label class="form-check-label" for="dryDockInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                    
                         <label class="form-label">Continuous Survey of Machineries (CSM) Planning and experience</label>
@@ -710,6 +740,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo" value="no">
                             <label class="form-check-label" for="csmPlanningNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable" value="no">
+                          <label class="form-check-label" for="csmPlanningInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -725,6 +759,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryNo" value="no">
                             <label class="form-check-label" for="yardDeliveryNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryInapplicable" value="no">
+                          <label class="form-check-label" for="yardDeliveryInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Awareness to Safety and ISM Code</label>
@@ -738,6 +776,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMNo" value="no">
                             <label class="form-check-label" for="safetyISMNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMInapplicable" value="no">
+                          <label class="form-check-label" for="safetyISMInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Experience in Internal/external audits, survey, Insp</label>
@@ -751,6 +793,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="audits" id="auditsNo" value="no">
                             <label class="form-check-label" for="auditsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="audits" id="auditsInapplicable" value="no">
+                          <label class="form-check-label" for="auditsInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Knowledge of ECA/SECA Operation</label>
@@ -764,6 +810,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationNo" value="no">
                             <label class="form-check-label" for="ecaSecaOperationNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationInapplicable" value="no">
+                          <label class="form-check-label" for="ecaSecaOperationInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Garbage Management Onboard</label>
@@ -777,6 +827,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementNo" value="no">
                             <label class="form-check-label" for="garbageManagementNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementInapplicable" value="no">
+                          <label class="form-check-label" for="garbageManagementInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Fuel Changeover Procedures</label>
@@ -790,6 +844,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverNo" value="no">
                             <label class="form-check-label" for="fuelChangeoverNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverInapplicable" value="no">
+                          <label class="form-check-label" for="fuelChangeoverInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                     
                         <label class="form-label">Principle and operation procedure - OWS, STP, Boilers, Purifiers, Generators, Fresh water generator</label>
@@ -803,6 +861,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresNo" value="no">
                             <label class="form-check-label" for="operationProceduresNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresInapplicable" value="no">
+                          <label class="form-check-label" for="operationProceduresInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                         <label class="form-label">Knowledge on existing mandatory regulations (SOLAS, MARPOL, COLREGS STCW, etc.) or new regulations - e.g., GHG, SEEMP, FAL</label>
                         <div class="mb-2">
@@ -815,6 +877,10 @@ SIRE/CID experience
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
                             <label class="form-check-label" for="regulationsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="checkbox" name="regulations" id="regulationsInapplicable" value="no">
+                          <label class="form-check-label" for="regulationsInapplicable">Inapplicable</label>
+                      </div>
                     </div>
                 </div>
                   
@@ -1029,7 +1095,14 @@ SIRE/CID experience
                       'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
                       'operationProceduresNo', 'regulationsYes', 'regulationsNo',
                       'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
-                      'intName', 'dateNow', 'signNow'
+                      'intName', 'dateNow', 'signNow','umsVesselsInapplicable',
+                      'bilgeSludgeInapplicable','pmsSoftwareInapplicable','reeferContainersInapplicable',
+                      'extraordinaryCircumstancesInapplicable','congestedPassageInapplicable','dryDockInapplicable',
+                      'csmPlanningInapplicable','yardDeliveryInapplicable','safetyISMInapplicable','auditsInapplicable',
+                      'ecaSecaOperationInapplicable','garbageManagementInapplicable','fuelChangeoverInapplicable',
+                      'operationProceduresInapplicable','regulationsInapplicable'
+
+
                   ];
   
                   const evalObject = {};
