--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -110,7 +110,7 @@
         </div>
         <div class="col border d-flex justify-content-center align-items-center">
           <p class=" fw-bolder" >
-            PRE-EMPLOYMENT EVALUATION SHEET OFFICERS - ENGINE
+            "PRE-EMPLOYEMENT EVALUATION SHEET OFFICERS - DECK"   
           </p>
         </div>
         <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
@@ -615,6 +615,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="sseNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="sseInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -625,6 +627,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ecdisNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="edisInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -635,6 +639,9 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="anchorNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="anchorInapplicable"/>
+                  <span>Inapplicable</span>
+                  
                 </div>
               </div>
 
@@ -645,6 +652,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="deckNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="deckInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -655,6 +664,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="bridgeNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="bridgeInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -665,6 +676,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ballastNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="ballastInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -675,6 +688,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="mlcNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="mlcInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -685,6 +700,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="pmsNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="pmsInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -693,8 +710,8 @@ SIRE/CID experience
                 <div class="space-x-2">
                   <input type="checkbox" class="form-checkbox" id="lsaYes"/>
                   <span>YES</span>
-                  <input type="checkbox" class="form-checkbox" id="lsaNo"/>
-                  <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="lsaInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -708,6 +725,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="extraNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="extraInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -722,6 +741,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="expNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="expInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -732,6 +753,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="distressNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="distressInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
             </div>
@@ -744,6 +767,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="dryNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="dryInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -754,8 +779,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="privacyNo"/>
                   <span>NO</span>
-                  <input type="checkbox" class="form-checkbox" id="privacyInappl"/>
-                  <span>INAPPLICABLE</span>
+                  <input type="checkbox" class="form-checkbox" id="privacyInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -769,6 +794,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="tugsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="tugsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -779,6 +806,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="gmoNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="gmoInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -789,6 +818,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="ecaNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="ecaInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -801,6 +832,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="auditsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="auditsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -811,6 +844,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="awareNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="awareInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -821,6 +856,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="yardNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="yardInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -834,6 +871,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="cmsNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="cmsInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -848,6 +887,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="mandatNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="mandatInapplicable"/>
+                  <span>Inapplicable</span>
                 </div>
               </div>
 
@@ -861,6 +902,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="riverNo" />
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="riverInapplicable" />
+                  <span>Inapplicable</span>
                 </div>
               </div>
             </div>
@@ -1048,14 +1091,30 @@ SIRE/CID experience
 
             function fetchValues() {
                 const ids = [
-                'fullName','rankApplied','nationality','telephone','othersTAE','mobile'
-                ,'qualification','lastContract','englishGood','englishSatisf','englishPoor',
-                'vessel1','europe','usa','medSea','farEast','pgGoa','crewExperienceYes',
-                'crewExperienceNo','nationality1','cargosHandled','automation','ceInput1',
-                'ceInput2','ceInput3','ceInput4','ceInput5','ceInput6','pumps','gears',
-                'drinkingYes','drinkingNo','medicalYes','medicalNo','contractsNo',
-                'vesselServed','lastContractsignOff','mainExp','auxExp','cargoCranes',
-                'cargoCarried','cargoPumps','tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo','ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo','bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo','pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes','expNo','distressYes','distressNo','dryYes','dryNo','privacyYes','privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo','auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo','cmsYes','cmsNo','mandatYes','mandatNo','riverYes','riverNo','reasonForLeaving','intComments','accepted','rejected','grading','intName','signature','dateNow'
+                'fullName','rankApplied','nationality','telephone','othersTAE',
+                'mobile','qualification','lastContract','englishGood','englishSatisf',
+                'englishPoor','vessel1','europe','usa','medSea','farEast','pgGoa',
+                'crewExperienceYes','crewExperienceNo','nationality1','cargosHandled',
+                'automation','ceInput1','ceInput2','ceInput3','ceInput4','ceInput5',
+                'ceInput6','pumps','gears','drinkingYes','drinkingNo','medicalYes',
+                'medicalNo','contractsNo','vesselServed','lastContractsignOff',
+                'mainExp','auxExp','cargoCranes','cargoCarried','cargoPumps',
+                'tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo',
+                'ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo',
+                'bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo',
+                'pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes',
+                'expNo','distressYes','distressNo','dryYes','dryNo','privacyYes',
+                'privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo',
+                'auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo',
+                'cmsYes','cmsNo','mandatYes','mandatNo','riverYes','riverNo',
+                'reasonForLeaving','intComments','accepted','rejected','grading',
+                'intName','signature','dateNow','sseInapplicable','edisInapplicable',
+                'anchorInapplicable','deckInapplicable','bridgeInapplicable','ballastInapplicable',
+                'mlcInapplicable','pmsInapplicable','lsaInapplicable','extraInapplicable',
+                'expInapplicable','distressInapplicable','dryInapplicable','privacyInapplicable',
+                'tugsInapplicable','gmoInapplicable','ecaInapplicable','auditsInapplicable',
+                'awareInapplicable','yardInapplicable','cmsInapplicable','mandatInapplicable',
+                'riverInapplicable'
                 ];
 
                 const evalObject = {};
