--- a/views/public/html/Evaluation-EngineRatings.html
+++ b/views/public/html/Evaluation-EngineRatings.html
@@ -110,7 +110,7 @@
                 <img src="../assets/img/illustrations/NautilusLogo.svg" style="width: 100px;" />
                 </div>
                 <div class="col border d-flex justify-content-center align-items-center">
-                    <p class="mb-4">PRE-EMPLOYEMENT EVALUATION SHEET RATINGS - DECK</p>
+                    <p class="mb-4">"PRE-EMPLOYEMENT EVALUATION SHEET RATINGS - GALLEY"</p>
             </div>
             <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
                 <p style="font-size: 10px;">
@@ -449,7 +449,7 @@ SIRE/CDI experience Right ship
 
     <div class="container mt-5 border border-black-1 p-3">
         <h4 class="mb-4">OTHER PRACTICAL EXPERIENCE (tick the appropriate box)</h4>
-        <form>
+      <form>
             <div class="row">
                 <div class="col-md-6 ">
                   
@@ -463,6 +463,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsNo" value="no">
                             <label class="form-check-label" for="umsVesselsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="umsVessels" id="umsVesselsInapplicable" value="no">
+                            <label class="form-check-label" for="umsVesselsInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                     
                         <label class="form-label">Cleanlineness & Maintenance of Mess Room</label>
@@ -475,9 +479,13 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeNo" value="no">
                             <label class="form-check-label" for="bilgeSludgeNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="bilgeSludge" id="bilgeSludgeInapplicable" value="no">
+                            <label class="form-check-label" for="bilgeSludgeInapplicable">Inapplicable</label>
+                        </div>
                     </div>
-                                           <label class="form-label">Cleanliness & Maintenance of Reefer Chambers</label>
-                                            <div class="mb-2">
+                     <label class="form-label">Cleanliness & Maintenance of Reefer Chambers</label>
+                     <div class="mb-2">
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareYes" value="yes">
@@ -486,6 +494,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareNo" value="no">
                             <label class="form-check-label" for="pmsSoftwareNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="pmsSoftware" id="pmsSoftwareInapplicable" value="no">
+                            <label class="form-check-label" for="pmsSoftwareInapplicable">Inapplicable</label>
                         </div>
                     </div>
                     
@@ -499,6 +511,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersNo" value="no">
                             <label class="form-check-label" for="reeferContainersNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="reeferContainers" id="reeferContainersInapplicable" value="no">
+                            <label class="form-check-label" for="reeferContainersInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                         <label class="form-label">General Hygiene and cooking methods</label>
                         <div class="mb-2">
@@ -510,6 +526,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesNo" value="no">
                             <label class="form-check-label" for="extraordinaryCircumstancesNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="extraordinaryCircumstances" id="extraordinaryCircumstancesInapplicable" value="no">
+                            <label class="form-check-label" for="extraordinaryCircumstancesInapplicable">Inapplicable</label>
                         </div>
                     </div>
                    
@@ -524,6 +544,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageNo" value="no">
                             <label class="form-check-label" for="congestedPassageNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="congestedPassage" id="congestedPassageInapplicable" value="no">
+                            <label class="form-check-label" for="congestedPassageInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                    
                         <label class="form-label">Dairy products stored at what level in refrigerator? (COOK & GS)</label>
@@ -537,6 +561,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockNo" value="no">
                             <label class="form-check-label" for="dryDockNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="dryDock" id="dryDockInapplicable" value="no">
+                            <label class="form-check-label" for="dryDockInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                    
                         <label class="form-label">Temperature to maintain while storing Fish, Meat & Vegetables (COOK & GS)</label>
@@ -549,6 +577,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo" value="no">
                             <label class="form-check-label" for="csmPlanningNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningInapplicable" value="no">
+                            <label class="form-check-label" for="csmPlanningInapplicable">Inapplicable</label>
                         </div>
                     </div>
                   
@@ -566,6 +598,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryNo" value="no">
                             <label class="form-check-label" for="yardDeliveryNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="yardDelivery" id="yardDeliveryInapplicable" value="no">
+                            <label class="form-check-label" for="yardDeliveryInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                     
                         <label class="form-label">Knowledge on Cutting boards - Colours</label>
@@ -578,6 +614,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMNo" value="no">
                             <label class="form-check-label" for="safetyISMNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="safetyISM" id="safetyISMInapplicable" value="no">
+                            <label class="form-check-label" for="safetyISMInapplicable">Inapplicable</label>
                         </div>
                     </div>
                     
@@ -592,6 +632,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="audits" id="auditsNo" value="no">
                             <label class="form-check-label" for="auditsNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="audits" id="auditsInapplicable" value="no">
+                            <label class="form-check-label" for="auditsInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                     
                         <label class="form-label">Knowledge on existing mandatory regulations (SOLAS, MARPOL)</label>
@@ -604,6 +648,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationNo" value="no">
                             <label class="form-check-label" for="ecaSecaOperationNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="ecaSecaOperation" id="ecaSecaOperationInapplicable"value="no">
+                            <label class="form-check-label" for="ecaSecaOperationInapplicable">Inapplicable</label>
                         </div>
                     </div>
                     
@@ -618,6 +666,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementNo" value="no">
                             <label class="form-check-label" for="garbageManagementNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="garbageManagement" id="garbageManagementInapplicable" value="no">
+                            <label class="form-check-label" for="garbageManagementInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                     
                         <label class="form-label">Experience of piracy Zone</label>
@@ -630,6 +682,10 @@ SIRE/CDI experience Right ship
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverNo" value="no">
                             <label class="form-check-label" for="fuelChangeoverNo">NO</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="fuelChangeover" id="fuelChangeoverInapplicable" value="no">
+                            <label class="form-check-label" for="fuelChangeoverInapplicable">Inapplicable</label>
                         </div>
                     </div>
                     
@@ -644,6 +700,10 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresNo" value="no">
                             <label class="form-check-label" for="operationProceduresNo">NO</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="operationProcedures" id="operationProceduresInapplicable" value="no">
+                            <label class="form-check-label" for="operationProceduresInapplicable">Inapplicable</label>
+                        </div>
                     </div>
                     
                         <label class="form-label">Awareness of Fire Fighting system in Galley</label>
@@ -657,20 +717,25 @@ SIRE/CDI experience Right ship
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
                             <label class="form-check-label" for="regulationsNo">NO</label>
                         </div>
-                    </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsInapplicable" value="no">
+                            <label class="form-check-label" for="regulationsInapplicable">Inapplicable</label>
+                        </div>
+                 </div>
                    
 
-                </div>
+                  </div>
+
                    <div class="mt-4 mb-3">
-            <label class="block mb-2">Last Employer – Reason for Leaving</label>
-            <input
-             id="leaving"
-              type="text"
-              placeholder="Enter reason for leaving"
-              class="w-full p-2 border rounded"
-            />
-          </div>
-            </div>
+                 <label class="block mb-2">Last Employer – Reason for Leaving</label>
+                  <input
+                    id="leaving"
+                  type="text"
+                  placeholder="Enter reason for leaving"
+                   class="w-full p-2 border rounded"
+                  />
+                 </div>
+                </div>
             </div>
 
             
@@ -736,8 +801,8 @@ SIRE/CDI experience Right ship
               <input id="dateNow" type="date" class="form-control" />
             </div>
           </div>
-        </div>
-        </form>
+         </div>
+      </form>
     
     </div>
 
@@ -864,7 +929,13 @@ SIRE/CDI experience Right ship
               'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes',
               'operationProceduresNo', 'regulationsYes', 'regulationsNo','leaving',
               'leavingLast', 'intComments', 'accepted', 'rejected', 'grading',
-              'intName', 'dateNow', 'signNow' ];
+              'intName', 'dateNow', 'signNow','umsVesselsInapplicable',
+            'bilgeSludgeInapplicable','pmsSoftwareInapplicable','reeferContainersInapplicable',
+        'extraordinaryCircumstancesInapplicable','congestedPassageInapplicable','dryDockInapplicable',
+        'csmPlanningInapplicable','yardDeliveryInapplicable','safetyISMInapplicable','auditsInapplicable',
+        'ecaSecaOperationInapplicable','garbageManagementInapplicable','fuelChangeoverInapplicable',
+        'operationProceduresInapplicable','regulationsInapplicable',
+     ];
     
                     const evalObject = {};
     
